--- a/index (2).html
+++ b/index (2).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factura</title>
+    <title>Factura alejandro</title>
 </head>
 <body>
     <div class="contenedor">
